Fixed font path

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,8 +1,8 @@
 @font-face {
 	font-family: 'Motiva Sans';
-	src: url('MotivaSans-Thin.woff2') format('woff2'),
-		url('MotivaSans-Thin.woff') format('woff'),
-		url('MotivaSans-Thin.ttf') format('truetype');
+	src: url('./assets/fonts/MotivaSans-Thin.woff2') format('woff2'),
+		url('./assets/fonts/MotivaSans-Thin.woff') format('woff'),
+		url('./assets/fonts/MotivaSans-Thin.ttf') format('truetype');
 	font-weight: 100;
 	font-style: normal;
 	font-display: swap;
@@ -10,9 +10,9 @@
 
 @font-face {
 	font-family: 'Motiva Sans';
-	src: url('MotivaSans-Regular.woff2') format('woff2'),
-		url('MotivaSans-Regular.woff') format('woff'),
-		url('MotivaSans-Regular.ttf') format('truetype');
+	src: url('./assets/fonts/MotivaSans-Regular.woff2') format('woff2'),
+		url('./assets/fonts/MotivaSans-Regular.woff') format('woff'),
+		url('./assets/fonts/MotivaSans-Regular.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
@@ -20,9 +20,9 @@
 
 @font-face {
 	font-family: 'Motiva Sans';
-	src: url('MotivaSans-Bold.woff2') format('woff2'),
-		url('MotivaSans-Bold.woff') format('woff'),
-		url('MotivaSans-Bold.ttf') format('truetype');
+	src: url('./assets/fonts/MotivaSans-Bold.woff2') format('woff2'),
+		url('./assets/fonts/MotivaSans-Bold.woff') format('woff'),
+		url('./assets/fonts/MotivaSans-Bold.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 	font-display: swap;
@@ -30,9 +30,9 @@
 
 @font-face {
 	font-family: 'Motiva Sans';
-	src: url('MotivaSans-Black.woff2') format('woff2'),
-		url('MotivaSans-Black.woff') format('woff'),
-		url('MotivaSans-Black.ttf') format('truetype');
+	src: url('./assets/fonts/MotivaSans-Black.woff2') format('woff2'),
+		url('./assets/fonts/MotivaSans-Black.woff') format('woff'),
+		url('./assets/fonts/MotivaSans-Black.ttf') format('truetype');
 	font-weight: 900;
 	font-style: normal;
 	font-display: swap;
@@ -40,9 +40,9 @@
 
 @font-face {
 	font-family: 'Motiva Sans';
-	src: url('MotivaSans-Medium.woff2') format('woff2'),
-		url('MotivaSans-Medium.woff') format('woff'),
-		url('MotivaSans-Medium.ttf') format('truetype');
+	src: url('./assets/fonts/MotivaSans-Medium.woff2') format('woff2'),
+		url('./assets/fonts/MotivaSans-Medium.woff') format('woff'),
+		url('./assets/fonts/MotivaSans-Medium.ttf') format('truetype');
 	font-weight: 500;
 	font-style: normal;
 	font-display: swap;
@@ -50,9 +50,9 @@
 
 @font-face {
 	font-family: 'Motiva Sans';
-	src: url('MotivaSans-Light.woff2') format('woff2'),
-		url('MotivaSans-Light.woff') format('woff'),
-		url('MotivaSans-Light.ttf') format('truetype');
+	src: url('./assets/fonts/MotivaSans-Light.woff2') format('woff2'),
+		url('./assets/fonts/MotivaSans-Light.woff') format('woff'),
+		url('./assets/fonts/MotivaSans-Light.ttf') format('truetype');
 	font-weight: 300;
 	font-style: normal;
 	font-display: swap;
@@ -60,9 +60,9 @@
 
 @font-face {
 	font-family: 'Motiva Sans';
-	src: url('MotivaSans-ExtraBold.woff2') format('woff2'),
-		url('MotivaSans-ExtraBold.woff') format('woff'),
-		url('MotivaSans-ExtraBold.ttf') format('truetype');
+	src: url('./assets/fonts/MotivaSans-ExtraBold.woff2') format('woff2'),
+		url('./assets/fonts/MotivaSans-ExtraBold.woff') format('woff'),
+		url('./assets/fonts/MotivaSans-ExtraBold.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 	font-display: swap;
